[gd_scene load_steps=25 format=4]

[ext_resource type="Script" path="res://Scripts/Endless_Summary.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dj8exx0kirs6l" path="res://Assets/Graphics/Table_game_over.png" id="2"]
[ext_resource type="Texture2D" uid="uid://gqqjwoy8fkxs" path="res://Assets/Graphics/Papers.png" id="3"]
[ext_resource type="Texture2D" uid="uid://disvidnncncs1" path="res://Assets/Graphics/Todays_list.png" id="4"]
[ext_resource type="Texture2D" uid="uid://7eb2pef2f15" path="res://Assets/Graphics/Paper.png" id="5"]
[ext_resource type="Texture2D" uid="uid://c24oae16ypu4i" path="res://Assets/Graphics/Border.png" id="6"]
[ext_resource type="Texture2D" uid="uid://cvky0rsqjcdql" path="res://Assets/Graphics/DDD_logo.png" id="7"]
[ext_resource type="Texture2D" uid="uid://bpj1f8kkd0p0s" path="res://Assets/Graphics/Blood_table.png" id="8"]
[ext_resource type="FontFile" uid="uid://cmyjws0sa77a1" path="res://Assets/Fonts/Nacho.ttf" id="9"]
[ext_resource type="FontFile" uid="uid://d2lr6x8obuyag" path="res://Assets/Fonts/Funny.ttf" id="10"]
[ext_resource type="Texture2D" uid="uid://buhd2plmahjhe" path="res://Assets/Graphics/Folder_floors.png" id="11"]
[ext_resource type="AudioStream" uid="uid://dq2opcunboupj" path="res://Assets/SFX-Music/SFX_Select.wav" id="12"]
[ext_resource type="AudioStream" uid="uid://dalcaapplmsmw" path="res://Assets/SFX-Music/SFX_Accept.wav" id="13"]
[ext_resource type="AudioStream" uid="uid://dpe74d30ei1jc" path="res://Assets/SFX-Music/SFX_Write.wav" id="14"]
[ext_resource type="AudioStream" uid="uid://dfu8mr0j8a1nf" path="res://Assets/SFX-Music/SFX_Pick_Up_Folder.wav" id="15"]
[ext_resource type="AudioStream" uid="uid://b7cwkpu1fivjx" path="res://Assets/SFX-Music/Music_Tutorial.wav" id="16"]
[ext_resource type="AudioStream" uid="uid://b4kii7ysdr5kn" path="res://Assets/SFX-Music/SFX_Magic_Dust.wav" id="17"]
[ext_resource type="PackedScene" uid="uid://4mtma7rrk5eo" path="res://Scenes/Trophie.tscn" id="18"]

[sub_resource type="StyleBoxEmpty" id="1"]
script = null

[sub_resource type="StyleBoxEmpty" id="2"]
script = null

[sub_resource type="StyleBoxEmpty" id="3"]
script = null

[sub_resource type="StyleBoxEmpty" id="4"]
script = null

[sub_resource type="StyleBoxEmpty" id="5"]
script = null

[sub_resource type="StyleBoxEmpty" id="6"]
script = null

[node name="EndlessSummary" type="Node2D"]
script = ExtResource("1")

[node name="Table" type="Sprite2D" parent="."]
position = Vector2(954, 532)
texture = ExtResource("2")

[node name="Papers" type="Node2D" parent="."]

[node name="Paper2" type="Sprite2D" parent="Papers"]
position = Vector2(-265, 70)
texture = ExtResource("3")

[node name="Paper" type="Sprite2D" parent="Papers"]
position = Vector2(470, 941)
texture = ExtResource("4")

[node name="Paper3" type="Sprite2D" parent="Papers"]
position = Vector2(578, -290)
texture = ExtResource("5")

[node name="Paper4" type="Sprite2D" parent="Papers"]
position = Vector2(1466, 587)
texture = ExtResource("5")

[node name="Lines" type="Sprite2D" parent="Papers/Paper4"]
texture = ExtResource("6")

[node name="DDD" type="Sprite2D" parent="Papers/Paper4"]
position = Vector2(112, 403)
texture = ExtResource("7")

[node name="Blood" type="Node2D" parent="."]
visible = false

[node name="Blood" type="Sprite2D" parent="Blood"]
modulate = Color(0.321569, 0, 0, 0.568627)
position = Vector2(966, 566)
texture = ExtResource("8")

[node name="Blood2" type="Sprite2D" parent="Blood"]
modulate = Color(0.321569, 0, 0, 0.568627)
position = Vector2(1720, 1231)
texture = ExtResource("8")

[node name="Blood3" type="Sprite2D" parent="Blood"]
modulate = Color(0.321569, 0, 0, 0.568627)
position = Vector2(-107, -15)
texture = ExtResource("8")

[node name="Blood4" type="Sprite2D" parent="Blood"]
modulate = Color(0.321569, 0, 0, 0.568627)
position = Vector2(1814, -138)
texture = ExtResource("8")

[node name="Blood5" type="Sprite2D" parent="Blood"]
modulate = Color(0.321569, 0, 0, 0.568627)
position = Vector2(46, 947)
rotation = -2.09014
texture = ExtResource("8")

[node name="Buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Continue" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 201.0
offset_top = 421.0
offset_right = 930.0
offset_bottom = 598.0
scale = Vector2(0.75, 0.75)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("9")
theme_override_font_sizes/font_size = 180
theme_override_styles/focus = SubResource("1")
action_mode = 0
text = "Continue"
flat = true

[node name="Record" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 270.0
offset_top = 593.0
offset_right = 770.0
offset_bottom = 770.0
scale = Vector2(0.75, 0.75)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("9")
theme_override_font_sizes/font_size = 180
theme_override_styles/focus = SubResource("2")
action_mode = 0
text = "Record"
flat = true

[node name="Menu2" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 300.0
offset_top = 759.0
offset_right = 736.0
offset_bottom = 936.0
scale = Vector2(0.75, 0.75)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("9")
theme_override_font_sizes/font_size = 180
theme_override_styles/focus = SubResource("3")
action_mode = 0
text = "Menu"
flat = true

[node name="Quit" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 298.0
offset_top = 921.0
offset_right = 734.0
offset_bottom = 1098.0
scale = Vector2(0.75, 0.75)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("9")
theme_override_font_sizes/font_size = 180
theme_override_styles/focus = SubResource("4")
action_mode = 0
text = "Quit"
flat = true

[node name="Doppel_info" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 1104.0
offset_top = 516.0
offset_right = 2064.0
offset_bottom = 693.0
scale = Vector2(0.75, 0.75)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("10")
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("5")
action_mode = 0
text = "Doppels you let in"
flat = true

[node name="Neighbor_info" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 1107.0
offset_top = 669.0
offset_right = 2067.0
offset_bottom = 846.0
scale = Vector2(0.75, 0.75)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("10")
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("5")
action_mode = 0
text = "Neighbors you killed"
flat = true

[node name="Texts" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Day_Title" type="Label" parent="Texts"]
layout_mode = 0
offset_left = 287.0
offset_top = 2.0
offset_right = 871.0
offset_bottom = 259.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("10")
theme_override_font_sizes/font_size = 80
text = "Day Summary"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Day_Title2" type="Label" parent="Texts"]
layout_mode = 0
offset_left = 1164.0
offset_top = -12.0
offset_right = 1748.0
offset_bottom = 245.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("10")
theme_override_font_sizes/font_size = 80
text = "Score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Text" type="Label" parent="Texts"]
layout_mode = 0
offset_left = 1115.0
offset_top = 122.0
offset_right = 1699.0
offset_bottom = 379.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("10")
theme_override_font_sizes/font_size = 80
text = "Best: "
vertical_alignment = 1

[node name="Text2" type="Label" parent="Texts"]
layout_mode = 0
offset_left = 1107.0
offset_top = 290.0
offset_right = 1691.0
offset_bottom = 547.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("10")
theme_override_font_sizes/font_size = 80
text = "Current: "
vertical_alignment = 1

[node name="Details" type="Node2D" parent="."]

[node name="Folder" type="Sprite2D" parent="Details"]
position = Vector2(-854, 484)
texture = ExtResource("11")

[node name="Paper" type="Sprite2D" parent="Details"]
position = Vector2(-430, 535)
scale = Vector2(0.9, 0.9)
texture = ExtResource("4")

[node name="Title" type="Label" parent="Details"]
offset_left = -686.0
offset_top = -21.0
offset_right = -102.0
offset_bottom = 236.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("10")
theme_override_font_sizes/font_size = 80
text = "Details:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Info" type="Label" parent="Details"]
offset_left = -712.0
offset_top = 189.0
offset_right = -128.0
offset_bottom = 900.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("10")
theme_override_font_sizes/font_size = 38
text = "* one

* two

* tree

* four

* five

* six

* seven

* eight

* nine
"
vertical_alignment = 1

[node name="Ok" type="Button" parent="Details"]
offset_left = -388.0
offset_top = 907.0
offset_right = -61.0
offset_bottom = 1036.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("9")
theme_override_font_sizes/font_size = 128
theme_override_styles/focus = SubResource("6")
disabled = true
action_mode = 0
text = "Ok"
flat = true

[node name="Select" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12")

[node name="Accept" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13")

[node name="Check_Write" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14")
pitch_scale = 0.85

[node name="Pick_Up_Folder" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16")
pitch_scale = 0.5

[node name="Magic_Dust" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17")

[node name="Trophie" parent="." instance=ExtResource("18")]
visible = false
position = Vector2(772, 656)

[connection signal="mouse_entered" from="Buttons/Continue" to="." method="_on_continue_button_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Continue" to="." method="_on_continue_button_mouse_exited"]
[connection signal="pressed" from="Buttons/Continue" to="." method="_on_continue_button_pressed"]
[connection signal="mouse_entered" from="Buttons/Record" to="." method="_on_record_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Record" to="." method="_on_record_mouse_exited"]
[connection signal="pressed" from="Buttons/Record" to="." method="_on_record_pressed"]
[connection signal="mouse_entered" from="Buttons/Menu2" to="." method="_on_menu_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Menu2" to="." method="_on_menu_mouse_exited"]
[connection signal="pressed" from="Buttons/Menu2" to="." method="_on_menu_pressed"]
[connection signal="mouse_entered" from="Buttons/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Quit" to="." method="_on_quit_mouse_exited"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_quit_pressed"]
[connection signal="mouse_entered" from="Buttons/Doppel_info" to="." method="_on_doppel_info_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Doppel_info" to="." method="_on_doppel_info_mouse_exited"]
[connection signal="pressed" from="Buttons/Doppel_info" to="." method="_on_doppel_info_pressed"]
[connection signal="mouse_entered" from="Buttons/Neighbor_info" to="." method="_on_neighbor_info_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Neighbor_info" to="." method="_on_neighbor_info_mouse_exited"]
[connection signal="pressed" from="Buttons/Neighbor_info" to="." method="_on_neighbor_info_pressed"]
[connection signal="mouse_entered" from="Details/Ok" to="." method="_on_ok_mouse_entered"]
[connection signal="mouse_exited" from="Details/Ok" to="." method="_on_ok_mouse_exited"]
[connection signal="pressed" from="Details/Ok" to="." method="_on_ok_pressed"]
